--- a/app/src/main/res/layout/activity_accountsetting_backup.xml
+++ b/app/src/main/res/layout/activity_accountsetting_backup.xml
@@ -47,7 +47,7 @@
             android:orientation="vertical"
             android:weightSum="1">
             <!-- A CardView that contains a TextView -->
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -64,20 +64,7 @@
                     android:focusableInTouchMode="true"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="fill_parent"
-                        android:layout_height="30dp"
-                        android:layout_marginTop="10dp"
-                        android:autoText="true"
-                        android:gravity="center|fill_vertical"
-                        android:paddingLeft="5dp"
-                        android:text="@string/label_basic_infomation"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textSize="22dp"
-                        android:textStyle="bold"
-                        android:typeface="serif"
-                        android:visibility="gone" />
+
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_name"
@@ -202,7 +189,7 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.CardView
                 android:id="@+id/card_view2"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
