--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="70dp"
         android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal"
+        android:layout_weight="0"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_profile" />
