--- a/app/src/main/res/layout/fragment_shareitem.xml
+++ b/app/src/main/res/layout/fragment_shareitem.xml
@@ -22,7 +22,7 @@
             app:tabMode="fixed" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <tp.ve.com.tradingplatform.component.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
