--- a/app/src/main/res/layout/fragment_sub_url.xml
+++ b/app/src/main/res/layout/fragment_sub_url.xml
@@ -1,80 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view_share_url"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0.06"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <EditText
-            android:id="@+id/urlText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_url"
-            android:text="www.baidu.com" />
-
-        <Button
-            android:id="@+id/btn_fetch"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/colorAccent"
-            android:text="Fetch"
-            android:textColor="#FFFFFF"
-            android:textSize="14dp"
-            android:typeface="serif" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_fetch_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        android:padding="10dp">
+        app:cardCornerRadius="5dp">
 
-
-        <TextView
-            android:id="@+id/content_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center_horizontal"
-            android:text="Title"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="20dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:background="@drawable/red_bg">
 
-        <TextView
-            android:id="@+id/content_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_horizontal"
-            android:layout_marginTop="20dp"
-            android:text="Image"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|center"
+                    android:text="Step 1"
+                    android:textColor="#ffffff"
+                    android:textStyle="bold"
+                    android:typeface="serif" />
+            </LinearLayout>
 
-        <ImageView
-            android:id="@+id/view_image"
-            android:layout_width="fill_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layout_fetch_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp">
 
-    <requestFocus
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:text="URL"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <LinearLayout
+                        android:id="@+id/share_url"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/urlText"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:layout_weight="1"
+                            android:inputType="textWebEditText"
+                            android:paddingLeft="5dp"
+                            android:singleLine="true"
+                            android:text="www.baidu.com"
+                            android:textSize="16dp" />
+                        <!--android:hint="@string/hint_url"-->
+
+                        <Button
+                            android:id="@+id/btn_fetch"
+                            android:layout_width="80dp"
+                            android:layout_height="30dp"
+                            android:background="@drawable/red_bg"
+                            android:text="Fetch"
+                            android:textColor="#FFF"
+                            android:textSize="12dp"
+                            android:typeface="sans" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dip"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:background="#c2c2c2"
+                    android:visibility="gone" />
+
+
+                <TextView
+                    android:id="@+id/content_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="Title"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <EditText
+                    android:id="@+id/text_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingLeft="5dp"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/content_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="Image"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <RelativeLayout
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="0">
+
+                    <ImageView
+                        android:id="@+id/view_image"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/icon_addpic_unfocused" />
+
+                    <Button
+                        android:id="@+id/btn_img_del"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/bt_dynamic_del"
+                        android:focusable="false" />
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#c2c2c2" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <Button
+                    android:id="@+id/btn_next"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="Next"
+                    android:textColor="@color/colorAccent"
+                    android:textStyle="bold"
+                    android:typeface="sans" />
+
+                <Button
+                    android:id="@+id/btn_clear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="Clear"
+                    android:typeface="sans" />
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
