--- a/app/src/main/res/layout/fragment_sub_url.xml
+++ b/app/src/main/res/layout/fragment_sub_url.xml
@@ -154,6 +154,14 @@
                         android:focusable="false" />
                 </RelativeLayout>
 
+                <Button
+                    android:id="@+id/testbtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:text="New Button"
+                    android:visibility="gone" />
+
 
             </LinearLayout>
 
@@ -188,6 +196,5 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
 
 </LinearLayout>
