--- a/app/src/main/res/layout/share_item_view.xml
+++ b/app/src/main/res/layout/share_item_view.xml
@@ -10,46 +10,46 @@
         android:background="?android:attr/selectableItemBackground"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:paddingTop="10dp">
 
-        <ImageView
+        <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/iv_icon"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:scaleType="fitXY"
-            android:src="@mipmap/test" />
+            android:scaleType="fitXY" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_weight="1"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:text="eeeeeeeeee"
                 android:textColor="@color/primary_dark_material_dark"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:typeface="serif" />
 
             <TextView
                 android:id="@+id/s_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="wwwwwwwwwww"
                 android:textColor="@color/grey05"
                 android:textSize="14dp"
-                android:typeface="serif"
-                android:layout_marginTop="10dp" />
+                android:typeface="serif" />
 
         </LinearLayout>
 
