--- a/app/src/main/res/layout/fragment_sub_list.xml
+++ b/app/src/main/res/layout/fragment_sub_list.xml
@@ -3,19 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="${relativePackage}.${activityClass}">
 
     <EditText
         android:id="@+id/inputSearch"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Search.."
-        android:inputType="textVisiblePassword"
-        android:background="@drawable/edit_border"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:background="@drawable/edit_border"
+        android:hint="Search.."
+        android:inputType="textVisiblePassword"
         android:padding="10dp"
         android:textSize="16dp" />
 
