--- a/app/src/main/res/layout/fragment_sub_url.xml
+++ b/app/src/main/res/layout/fragment_sub_url.xml
@@ -60,12 +60,15 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="0dp"
                         android:text="URL"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:layout_marginLeft="5dp" />
 
                     <LinearLayout
                         android:id="@+id/share_url"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
                         android:orientation="horizontal">
 
                         <EditText
@@ -109,7 +112,8 @@
                     android:layout_gravity="left|center_horizontal"
                     android:layout_marginTop="20dp"
                     android:text="Title"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_marginLeft="5dp" />
 
                 <EditText
                     android:id="@+id/text_title"
@@ -126,7 +130,8 @@
                     android:layout_gravity="left|center_horizontal"
                     android:layout_marginTop="20dp"
                     android:text="Image"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_marginLeft="5dp" />
 
                 <RelativeLayout
                     android:layout_width="120dp"
