--- a/app/src/main/res/layout/fragment_sub_content.xml
+++ b/app/src/main/res/layout/fragment_sub_content.xml
@@ -118,6 +118,7 @@
                     android:gravity="top"
                     android:inputType="textMultiLine"
                     android:padding="5dp"
+                    android:scrollbars="vertical"
                     android:text="wwwwwwwwwwww"
                     android:textSize="14dp" />
 
