--- a/app/src/main/res/layout/fragment_sub_detail.xml
+++ b/app/src/main/res/layout/fragment_sub_detail.xml
@@ -166,6 +166,7 @@
                         android:gravity="top"
                         android:inputType="textMultiLine"
                         android:padding="5dp"
+                        android:scrollbars="vertical"
                         android:text="wwwwwwwwwwww"
                         android:textSize="14dp" />
                 </LinearLayout>
