--- a/app/src/main/res/layout/fragment_account_advanced.xml
+++ b/app/src/main/res/layout/fragment_account_advanced.xml
@@ -40,38 +40,57 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:background="@drawable/red_bg" >
+
+                        <TextView
+                            android:id="@+id/textView12"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical|center"
+                            android:text="Profile"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
+                            android:typeface="serif" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1.53"
                         android:gravity="bottom|center"
-                        android:paddingLeft="30dp"
-                        android:visibility="visible">
+                        android:visibility="visible"
+                        android:weightSum="1"
+                        android:paddingLeft="5dp">
 
                         <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                             android:id="@+id/type_group"
                             android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:layout_height="fill_parent"
+                            android:orientation="horizontal"
+                            android:gravity="left"
+                            android:layout_weight="0.25">
 
                             <RadioButton
                                 android:id="@+id/rb_company"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:checked="true"
                                 android:text="@string/radio_company"
                                 android:textColor="#7e7e7e"
-                                android:textSize="16dp" />
+                                android:textSize="16dp"
+                                android:layout_weight="1" />
 
                             <RadioButton
                                 android:id="@+id/rb_individual"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:checked="false"
                                 android:text="@string/radio_individual"
                                 android:textColor="#7e7e7e"
-                                android:textSize="16dp" />
+                                android:textSize="16dp"
+                                android:layout_weight="1" />
                         </RadioGroup>
                     </LinearLayout>
 
@@ -445,6 +464,7 @@
 
                         </LinearLayout>
                     </HorizontalScrollView>
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
