--- a/app/src/main/res/layout/fragment_account_buyer.xml
+++ b/app/src/main/res/layout/fragment_account_buyer.xml
@@ -37,6 +37,22 @@
                     android:focusableInTouchMode="true"
                     android:orientation="vertical">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:background="@drawable/red_bg" >
+
+                        <TextView
+                            android:id="@+id/textView13"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical|center"
+                            android:text="Profile"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
+                            android:typeface="serif" />
+                    </LinearLayout>
+
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_name"
                         android:layout_width="match_parent"
@@ -157,6 +173,7 @@
                             android:textSize="16dp"
                             android:typeface="sans" />
                     </android.support.design.widget.TextInputLayout>
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
