--- a/app/src/main/res/drawable/share_bg_corner.xml
+++ b/app/src/main/res/drawable/share_bg_corner.xml
@@ -4,6 +4,10 @@
     android:shape="rectangle"
     android:thickness="0dp">
     <corners android:radius="20dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="#fff" />
+    <!--<gradient-->
+    <!--android:endColor="#fff"-->
+    <!--android:startColor="#ccc"-->
+    <!--android:angle="45"  />-->
 
 </shape>
