--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,6 +13,7 @@
 
 
     <ImageView
+        android:id="@+id/header_img"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_centerInParent="true"
