--- a/app/src/main/res/layout/activity_me.xml
+++ b/app/src/main/res/layout/activity_me.xml
@@ -7,7 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="200dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -39,8 +39,8 @@
         android:id="@+id/me_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white1"
-        android:paddingTop="10dp"
+        android:background="#fff"
+        android:paddingTop="15dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
@@ -48,10 +48,11 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginRight="10dp"
+        android:scaleType="center"
         android:src="@drawable/edit_role"
+        app:backgroundTint="@android:color/holo_blue_dark"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
-        app:theme="@style/ThemeOverlay.AppCompat.Light"
-        android:scaleType="center" />
-
+        app:theme="@style/ThemeOverlay.AppCompat.Light" />
+    <!---->
 </android.support.design.widget.CoordinatorLayout>
